added login and register page

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -2,6 +2,6 @@
 
 @theme {
     /* #0A0F2C #DC143C */
-    --color-darkBlue: #1e3a8a;
+    --color-darkBlue: #050814;
     --color-crimsonRed: #dc2626;
 }
